--- a/src/app.html
+++ b/src/app.html
@@ -2,12 +2,16 @@
   <require from="./styles.css"></require>
   <require from="./contact-list"></require>
 
-  <nav class="navbar navbar-light bg-light fixed-top" role="navigation">
-    <a class="navbar-brand" href="#">
-      <i class="fa fa-user"></i>
-      <span>Contacts</span>
-    </a>
+  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">
+        <i class="fa fa-user"></i>
+        <span>Contacts</span>
+      </a>
+    </div>
   </nav>
+
+  <loading-indicator loading.bind="router.isNavigating || api.isRequesting"></loading-indicator>
 
   <div class="container">
     <div class="row">
